# eLinux_CRC32

./: .gitignore  CMakeLists.txt  CRC32.c  CRC32.h  README.md
include/: crc32.h
src/: crc32.c
test/: CMakeLists.txt  test.c  testbench
